--- a/src/app/components/target-detail/target-detail.component.html
+++ b/src/app/components/target-detail/target-detail.component.html
@@ -1,13 +1,17 @@
-Name: {{target.name}}
-<br/> buff: 
+<div (click)="deleteTarget(target)">
+  Name: {{target.name}}
+</div>
+<div>
+  <br/> buff: 
   <span *ngFor="let buff of target?.buffs">
     {{buff?.name}}
     <span *ngIf="buff?.duration !== 1">({{buff?.duration}})</span>
     <span *ngIf="buff?.duration === 1" class="lastTurn">last turn</span>
   </span>
-<br/> debuff: 
+  <br/> debuff: 
   <span *ngFor="let debuff of target?.debuffs">
     {{debuff?.name}} 
     <span *ngIf="debuff?.duration !== 1">({{debuff?.duration}})</span>
     <span *ngIf="debuff?.duration === 1" class="lastTurn">last turn</span>
   </span>
+</div>
