[+][spell] add cooldown

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,15 +15,7 @@
 ></app-target-list>
 <app-spell-list></app-spell-list>
 
-button: next turn
-button: have a nap
-list debuf
-list buff
-list carac -> number of dice to launch, number of free result
-jauge PR
-jauge rune
 pauge pv
-rune regen
 
 
 all spell list
@@ -45,3 +37,15 @@ nombre d'ennemi
   nom
   degat subit
   focus (multi)
+
+  Todo
+<ul>
+    <li>damage -> pv reduction</li>
+    <li>constit -> pv</li>
+    <li>intel -> pv</li>
+    <li>damage f(F, A)</li>
+    <li>tsointsoin</li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
