[*][target] fix after first test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,16 +33,12 @@ all spell list
   when to use (instant, your turn)
   effect (instant, next turn)
 
-nombre d'ennemi
-  nom
-  degat subit
-  focus (multi)
 
   Todo
 <ul>
-    <li>damage -> pv reduction</li>
-    <li>constit -> pv</li>
-    <li>intel -> pv</li>
+  <li>damage -> hp reduction</li>
+  <li>constit -> hp</li>
+    <li>intel -> mp</li>
     <li>damage f(F, A)</li>
     <li>tsointsoin</li>
     <li></li>
