[+][user charac] when change value, update in db(#store)

--- a/src/app/components/user-edit/user-edit.component.html
+++ b/src/app/components/user-edit/user-edit.component.html
@@ -1,6 +1,6 @@
 <h1 (click)="toogleUserCaracVisibility()">User Carac</h1>
 
-<form [formGroup]="userForm" *ngIf="showCarac">
+<form [formGroup]="userForm" *ngIf="showCarac" (input)=handleChangeFormValue(userForm.value)>
     <div>
     <label for="force">Force</label>
     <br/><input 
