--- a/src/app/components/spell-list/spell-list.component.html
+++ b/src/app/components/spell-list/spell-list.component.html
@@ -3,6 +3,11 @@
     <th *ngFor="let column of columns">
       {{column?.title}}
     </th>
+  </tr> 
+  <tr>
+    <th *ngFor="let column of columns">
+      <input (input)="filterColumn($event?.target?.value, column?.title)" type="text"/>
+    </th>
   </tr>
   <tr *ngFor="let spell of showData" (click)="castSpell(spell[0])">
     <td *ngFor="let cell of spell">{{printBonusValue(cell) | json}}</td>
